@@ -120,7 +120,8 @@ rwtestAllXml() {
       rwtestXml testHarmony1.xml
       rwtestXml testHarmony2.xml
       rwtestXml testHello.xml
-      rwtestXml testImplicitMeasure1.xml
+      rwtestXml testInvisibleElements.xml
+      rwtestXml testHello.xml
       rwtestXml testKeysig1.xml
       rwtestXml testLines1.xml
       rwtestXml testLines2.xml
